--- a/index.html
+++ b/index.html
@@ -80,20 +80,20 @@
 </div>
 <hr/>
 <a href="vip.html">
-<div class="am-padding-vertical unlogic"
-     style="background: url('assets/images/leftColor.png') no-repeat; background-size: contain">
-    <div class="am-g am-inline">
-        <div class="am-u-sm-1">
-            <img src="assets/images/hui.png" class="icon">
-        </div>
-        <div class="am-u-sm-6 am-padding-left am-text-sm">免费领取会员啦！积分
-            <div class="text-grey am-text-xs">2015.07.01前有效</div>
-        </div>
-        <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+    <div class="am-padding-vertical unlogic"
+         style="background: url('assets/images/leftColor.png') no-repeat; background-size: contain">
+        <div class="am-g am-inline">
+            <div class="am-u-sm-1">
+                <img src="assets/images/hui.png" class="icon">
+            </div>
+            <div class="am-u-sm-6 am-padding-left am-text-sm">免费领取会员啦！积分
+                <div class="text-grey am-text-xs">2015.07.01前有效</div>
+            </div>
+            <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
+                <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
+            </div>
         </div>
     </div>
-</div>
 </a>
 <hr/>
 <a href="vip.html" class="hide logic">
@@ -112,9 +112,11 @@
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <button type="button" class="am-btn am-btn-xs button">
-                领劵到特权
-            </button>
+            <a href="getCoupon.html">
+                <button type="button" class="am-btn am-btn-xs button">
+                    领劵到特权
+                </button>
+            </a>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
@@ -125,9 +127,11 @@
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <button type="button" class="am-btn am-btn-xs button">
-                领劵到特权
-            </button>
+            <a href="getCoupon.html">
+                <button type="button" class="am-btn am-btn-xs button">
+                    领劵到特权
+                </button>
+            </a>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
@@ -138,9 +142,11 @@
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <button type="button" class="am-btn am-btn-xs button">
-                领劵到特权
-            </button>
+            <a href="getCoupon.html">
+                <button type="button" class="am-btn am-btn-xs button">
+                    领劵到特权
+                </button>
+            </a>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
@@ -151,9 +157,11 @@
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <button type="button" class="am-btn am-btn-xs button">
-                领劵到特权
-            </button>
+            <a href="getCoupon.html">
+                <button type="button" class="am-btn am-btn-xs button">
+                    领劵到特权
+                </button>
+            </a>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
@@ -164,9 +172,11 @@
         </div>
         <div class="am-u-sm-6 am-padding-left am-text-sm">生日特惠，生日当天返生日当天返劵</div>
         <div class="am-u-sm-5 text-grey am-text-xs am-text-right am-padding-right-xl">已有200人领取
-            <button type="button" class="am-btn am-btn-xs button">
-                领劵到特权
-            </button>
+            <a href="getCoupon.html">
+                <button type="button" class="am-btn am-btn-xs button">
+                    领劵到特权
+                </button>
+            </a>
             <div class="am-fr activity-arrow"><i class="iconfont">&#xe605;</i></div>
         </div>
     </div>
