--- a/power.html
+++ b/power.html
@@ -86,7 +86,7 @@
         <div class="am-padding-sm">
             <i class="iconfont">&#xe60c;</i>
             <span class="padding-xxs text-black">充值余额</span>
-            <span class="am-fr">$2015.0<i class="iconfont am-vertical-align-middle padding-xxs">&#xe605;</i></span>
+            <span class="am-fr">￥2015.0<i class="iconfont am-vertical-align-middle padding-xxs">&#xe605;</i></span>
         </div>
     </a>
     <hr/>
@@ -94,7 +94,7 @@
         <div class="am-padding-sm">
             <i class="iconfont">&#xe60b;</i>
             <span class="padding-xxs text-black">会员积分</span>
-            <span class="am-fr">$2015.0<i class="iconfont am-vertical-align-middle padding-xxs">&#xe605;</i></span>
+            <span class="am-fr">￥2015.0<i class="iconfont am-vertical-align-middle padding-xxs">&#xe605;</i></span>
         </div>
     </a>
     <hr/>
