--- a/remainder.html
+++ b/remainder.html
@@ -32,7 +32,7 @@
 
 <body>
 
-<div class="am-g am-sticky">
+<div class="bg-white am-g am-sticky">
     <header data-am-widget="header"
             class="am-header am-header-default bg-white am-animation-scale-down">
         <div class="am-header-left am-header-nav">
@@ -46,41 +46,42 @@
 
     </header>
     <hr/>
-</div>
-<div style="height: 50px"></div>
 
-<div class="am-padding-sm">
-    <strong class="am-text-sm">当前余额</strong><br/>
-    <strong class="am-text-xl text-orange">2525.0</strong>
-    <button class="am-btn border-radius text-white  am-u-sm-12 am-u-sm-centered" style="background: #a4a4a4">
-        欲充值金额，请呼叫服务员助您操作
-    </button>
-</div>
-<div class="second-title" style="height: 8px"></div>
-<div class="am-padding-sm">
-    <div class="am-text-xs text-orange">请向服务员展示"识别码"升级会员!</div>
-    <div class="am-g am-g-collapse am-text-center am-text-lg text-orange ">
-        <div class="am-u-sm-2 am-g-collapse am-text-left">
-            <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
-        </div>
-        <div class="am-u-sm-2 am-g-collapse am-text-left">
-            <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
-        </div>
-        <div class="am-u-sm-2 am-g-collapse am-text-left">
-            <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
-        </div>
-        <div class="am-u-sm-2 am-g-collapse am-text-left">
-            <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
-        </div>
-        <div class="am-u-sm-2 am-g-collapse am-text-left">
-            <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
-        </div>
-        <div class="am-u-sm-2 am-g-collapse am-text-left">
-            <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+    <div class="am-padding-sm">
+        <strong class="am-text-sm">当前余额</strong><br/>
+        <strong class="am-text-xl text-orange">2525.0</strong>
+        <button class="am-btn border-radius text-white  am-u-sm-12 am-u-sm-centered" style="background: #a4a4a4">
+            欲充值金额，请呼叫服务员助您操作
+        </button>
+    </div>
+    <div class="second-title" style="height: 8px"></div>
+    <div class="am-padding-sm">
+        <div class="am-text-xs text-orange">请向服务员展示"识别码"升级会员!</div>
+        <div class="am-g am-g-collapse am-text-center am-text-lg text-orange ">
+            <div class="am-u-sm-2 am-g-collapse am-text-left">
+                <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+            </div>
+            <div class="am-u-sm-2 am-g-collapse am-text-left">
+                <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+            </div>
+            <div class="am-u-sm-2 am-g-collapse am-text-left">
+                <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+            </div>
+            <div class="am-u-sm-2 am-g-collapse am-text-left">
+                <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+            </div>
+            <div class="am-u-sm-2 am-g-collapse am-text-left">
+                <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+            </div>
+            <div class="am-u-sm-2 am-g-collapse am-text-left">
+                <div class="am-icon-border"><strong>&nbsp;&nbsp;1&nbsp;&nbsp;</strong></div>
+            </div>
         </div>
     </div>
+    <hr/>
 </div>
-<div class="bg-grey-white am-padding-sm am-text-sm text-grey">
+<div class="bg-white" style="height: 260px"></div>
+<div class="bg-grey-white am-padding-sm am-text-sm text-grey" data-am-sticky="{top:470}">
     <strong class="am-text-default text-black am-margin-right-sm">本月</strong>
 </div>
 <div>
@@ -104,11 +105,111 @@
     </div>
     <div class="am-cf"></div>
     <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">店内充值<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">店内充值<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">店内充值<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">店内充值<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
 </div>
-<div class="bg-grey-white am-padding-sm am-text-sm text-grey">
+<div class="bg-grey-white am-padding-sm am-text-sm text-grey" data-am-sticky="{top:670}">
     <strong class="am-text-default text-black am-margin-right-sm">11月</strong>
 </div>
 <div>
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">店内充值<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">店内充值<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">店内充值<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">店内充值<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">店内充值<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
+    <div class="am-padding-sm">
+        <div class="am-fl" style="width: 80%">店内充值<br/>
+            <div class="am-text-xs text-grey">2015-12-22</div>
+        </div>
+        <div class="am-fl am-text-right am-text-xs" style="width: 20%">
+            <span class="text-orange">+600.0</span>
+        </div>
+    </div>
+    <div class="am-cf"></div>
+    <hr class="am-margin-left-sm am-margin-top-sm">
     <div class="am-padding-sm">
         <div class="am-fl" style="width: 80%">店内充值<br/>
             <div class="am-text-xs text-grey">2015-12-22</div>
