--- a/vip.html
+++ b/vip.html
@@ -63,7 +63,7 @@
 <!--登陆-->
 <div class="am-padding-sm">
     <div class="am-padding-vertical-xs">
-        <strong>如果需要升级会员，请告知服务员为你服务~</strong></div>
+        <strong>如果需要参加会员活动，请告知服务员为你服务~</strong></div>
     <div class="am-text-xs text-orange">请向服务员展示"识别码"升级会员!</div>
     <div class="am-g am-g-collapse am-text-center am-text-lg am-padding-vertical text-orange ">
         <div class="am-u-sm-2 am-g-collapse">
@@ -130,7 +130,7 @@
                     <span style="margin-left: -3px">免费领取银卡会员卡</span>
                 </div>
                 <div class="am-fr">
-                    <button class="am-btn am-btn-xs btn">免费领卡</button>
+                    <button class="am-btn am-btn-xs btn" id="getCard">免费领卡</button>
                 </div>
             </div>
         </div>
@@ -147,7 +147,7 @@
             <div class="border-radius bg-grey-white am-margin-top-sm">
                 <div class="am-padding-sm">
                     会员生日送券
-                    <div class="am-text-xs text-grey">2016/02/26 - 2016/02/30有效</div>
+                    <div class="am-text-xs text-grey"><span>2016/02/26 - 2016/02/30有效</span></div>
                 </div>
             </div>
             <div class="border-radius bg-grey-white am-margin-top-sm">
@@ -169,11 +169,11 @@
                 </div>
                 <div class="am-u-sm-8 ">
                     <div class="margin-push">
-                        免费领取银卡会员卡免费领取银卡免费领取银卡
+                        银卡会员充值200元成为金卡会员
                     </div>
                 </div>
                 <div class="am-u-sm-3">
-                    <button class="am-btn am-btn-xs am-u-sm-offset-2 am-u-sm-10 btn">马上充值</button>
+                    <button class="am-btn am-btn-xs am-u-sm-offset-2 am-u-sm-10 btn" data-am-smooth-scroll>马上充值</button>
                 </div>
             </div>
             <hr class="am-cf am-margin-vertical-sm"/>
@@ -184,11 +184,13 @@
                 </div>
                 <div class="am-u-sm-8">
                     <div class="margin-push">
-                        免费领取银卡会员卡免费领取银卡免费领取银卡
+                        银卡会员充值200元成为金卡会员
                     </div>
                 </div>
                 <div class="am-u-sm-3">
-                    <button class="am-btn am-btn-xs am-u-sm-offset-2 am-u-sm-10 btn">马上充值</button>
+                    <button class="am-btn am-btn-xs am-u-sm-offset-2 am-u-sm-10 btn"
+                            data-am-modal="{target: '#my-alert'}">去兑换
+                    </button>
                 </div>
             </div>
             <hr class="am-cf am-margin-vertical-sm am-margin-left"/>
@@ -200,7 +202,9 @@
                     </div>
                 </div>
                 <div class="am-u-sm-3">
-                    <button class="am-btn am-btn-xs am-u-sm-offset-2 am-u-sm-10 btn">马上充值</button>
+                    <button class="am-btn am-btn-xs am-u-sm-offset-2 am-u-sm-10 btn"
+                            data-am-modal="{target: '#my-alert'}">去兑换
+                    </button>
                 </div>
             </div>
             <hr class="am-cf am-margin-vertical-sm"/>
@@ -215,24 +219,57 @@
                     </div>
                 </div>
                 <div class="am-u-sm-3">
-                    <button class="am-btn am-btn-xs am-u-sm-offset-2 am-u-sm-10 btn">马上充值</button>
+                    <button class="am-btn am-btn-xs am-u-sm-offset-2 am-u-sm-10 btn"
+                            data-am-modal="{target: '#my-alert'}">去兑换
+                    </button>
                 </div>
             </div>
         </div>
     </div>
 </div>
-<!--登陆end-->
-<div class="second-title" style="height: 63px"></div>
 
-<div class="am-g  bg-white" style="position: fixed;bottom: 0;">
-    <div class="am-u-sm-12 am-margin-sm">
-        <button class="am-btn button am-block am-u-sm-10 am-u-sm-centered">加入会员</button>
+<div class="am-modal am-modal-confirm" tabindex="-1" id="my-confirm">
+    <div class="am-modal-dialog">
+        <div class="am-modal-hd">上宾提醒你</div>
+        <div class="am-modal-bd">
+            领卡成功！
+        </div>
+        <div class="am-modal-footer">
+            <span class="am-modal-btn" data-am-modal-confirm>去看看</span>
+            <span class="am-modal-btn" data-am-modal-cancel>知道了！</span>
+        </div>
     </div>
 </div>
+
+<div class="am-modal am-modal-alert" tabindex="-1" id="my-alert">
+    <div class="am-modal-dialog">
+        <div class="am-modal-hd">上宾提示您</div>
+        <div class="am-modal-bd">
+            请下载APP进行积分兑换
+        </div>
+        <div class="am-modal-footer">
+            <a href="#"><span class="am-modal-btn" data-am-modal-confirm>下载APP</span></a>
+            <span class="am-modal-btn" data-am-modal-cancel>知道了！</span>
+        </div>
+    </div>
+</div>
+<!--登陆end-->
 
 <script src="assets/js/jquery.min.js"></script>
 <script src="assets/js/amazeui.min.js"></script>
 <script>
+    $('#getCard').on('click', function () {
+        $('#my-confirm').modal({
+            relatedTarget: this,
+            onConfirm: function () {
+                self.location = "power.html";
+            },
+            onCancel: function () {
+                $('#getCard').addClass('am-disabled');
+            }
+        });
+
+    });
 </script>
 </body>
 </html>
